# BuildOn

./: Build-On-3.pptx  Build-On-4.pptx  Build-On.pptx  README.md
BuildOn-2-Solution-TS/dir_nav/src/: lib.rs
BuildOn-2-Solution-TS/text_search/examples/: test1.rs
BuildOn-2-Solution/text_search/: Cargo.toml
BuildOn-4-Solution-CP/cmdln_parser/src/: lib.rs
BuildOn-4-Solution/cmdln_parser/examples/: test1.rs
BuildOn-5-Solution-TF/dir_nav/: Cargo.toml
BuildOn-5-Solution-TF/dir_nav/src/: lib.rs
BuildOn-5-Solution-TF/display/examples/: test1.rs
BuildOn-5-Solution-TF/display/src/: lib.rs
BuildOn-5-Solution-TF/text_finder/examples/: test1.rs  test2.rs
BuildOn-5-Solution-TF/text_finder/src/: lib.rs
BuildOn-5-Solution-TF/text_search/: Cargo.toml
BuildOn-5-Solution-TF/text_search/examples/: test1.rs
BuildOn-5-Solution-TF/text_search/src/: lib.rs
BuildOn-5-Solution/dir_nav/examples/: test1.rs
BuildOn-5-Solution/text_finder/: Cargo.toml
BuildOn-5-Solution/text_finder/examples/: test1.rs  test2.rs
BuildOn-5-Solution/text_finder/src/: lib.rs
BuildOn-5-Solution/text_search/examples/: test1.rs
BuildOn-5-Solution/text_search/src/: lib.rs
BuildOn-6-Solution-RE/cmdln_parser/src/: lib.rs
BuildOn-6-Solution-RE/text_finder/src/: lib.rs
BuildOn-6-Solution-RE/text_search/: Cargo.toml
BuildOn-6-Solution-RE/text_search/examples/: test1.rs
BuildOn-6-Solution-RE/text_search/src/: lib.rs
TestDB/: Cargo.toml
TestDB/examples/: test1.rs  test2.rs
TestDB/src/: lib.rs
archive/step_1/: Cargo.toml
step_1/examples/: test1.rs
step_1/src/: lib.rs
(+31 files in other folders)
