[package]
name = "integration"
version = "0.1.0"
authors = ["James W. Fawcett <jfawcett@twcny.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
cmdln_parser = { path = "../cmdln_parser" }
dir_nav = { path = "../dir_nav" }
text_search = { path = "../text_search" }
display = { path = "../display" }
regex = "1"